--- a/fileSystem/fileSystem.conf
+++ b/fileSystem/fileSystem.conf
@@ -1,8 +1,8 @@
 IP_MEMORIA=127.0.0.1
 PUERTO_MEMORIA=8002
 PUERTO_ESCUCHA=8003
+PATH_SUPERBLOQUE=/home/utnso/tp-2023-1c-Guindows/fs/superbloque.dat
+PATH_BITMAP=/home/utnso/tp-2023-1c-Guindows/fs/bitmap.dat
+PATH_BLOQUES=/home/utnso/tp-2023-1c-Guindows/fs/bloques.dat
+PATH_FCB=/home/utnso/tp-2023-1c-Guindows/fs/fcb
 RETARDO_ACCESO_BLOQUE=15000
-PATH_SUPERBLOQUE=/fs/sbloque.dat
-PATH_BITMAP=/fs/bitmap.dat
-PATH_BLOQUES=/fs/bloques.dat
-PATH_FCB=/fs/fcb
