--- a/memoria/Debug/makefile
+++ b/memoria/Debug/makefile
@@ -9,6 +9,8 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include src/subdir.mk
+-include objects.mk
+
 ifneq ($(MAKECMDGOALS),clean)
 ifneq ($(strip $(C_DEPS)),)
 -include $(C_DEPS)
@@ -37,10 +39,10 @@ all: main-build
 main-build: memoria
 
 # Tool invocations
-memoria: $(OBJS) $(USER_OBJS) makefile $(OPTIONAL_TOOL_DEPS)
+memoria: $(OBJS) $(USER_OBJS) makefile objects.mk $(OPTIONAL_TOOL_DEPS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C Linker'
-	gcc -L"/home/utnso/tp-2023-1c-Guindows/shared-lib/Debug" -o "memoria" $(OBJS) $(USER_OBJS) $(LIBS) -lcommons -lpthread -lshared-lib
+	gcc -L"/home/utnso/tp-2023-1c-Guindows/shared-lib/Debug" -o "memoria" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
