--- a/shared-lib/Debug/makefile
+++ b/shared-lib/Debug/makefile
@@ -9,6 +9,8 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include src/subdir.mk
+-include objects.mk
+
 ifneq ($(MAKECMDGOALS),clean)
 ifneq ($(strip $(C_DEPS)),)
 -include $(C_DEPS)
@@ -37,10 +39,10 @@ all: main-build
 main-build: libshared-lib.so
 
 # Tool invocations
-libshared-lib.so: $(OBJS) $(USER_OBJS) makefile $(OPTIONAL_TOOL_DEPS)
+libshared-lib.so: $(OBJS) $(USER_OBJS) makefile objects.mk $(OPTIONAL_TOOL_DEPS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C Linker'
-	gcc -shared -o "libshared-lib.so" $(OBJS) $(USER_OBJS) $(LIBS) -lcommons -lpthread
+	gcc -shared -o "libshared-lib.so" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
